--- a/index.html
+++ b/index.html
@@ -3,30 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>私のウェブサイト</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            line-height: 1.6;
-        }
-        h1 {
-            color: #333;
-            border-bottom: 2px solid #eee;
-            padding-bottom: 10px;
-        }
-        .content {
-            margin-top: 20px;
-        }
-    </style>
+    <title>ポートフォリオ</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>ようこそ！</h1>
-    <div class="content">
-        <p>これはGitHub Pagesで公開された私のウェブサイトです。</p>
-        <p>このサイトは無料でホスティングされています。</p>
+    <nav>
+        <ul>
+            <li><a href="#home">ホーム</a></li>
+            <li><a href="#projects">プロジェクト</a></li>
+            <li><a href="#skills">スキル</a></li>
+            <li><a href="#contact">連絡先</a></li>
+        </ul>
+    </nav>
+    <div id="home" class="profile">
+        <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="プロフィール写真">
+        <h1>ITを活用して皆様の生活やプライベートに有効活用できるようなサービスを作りたい</h1>
     </div>
+    <div id="projects" class="intro">
+        <h2>プロジェクト</h2>
+        <!-- プロジェクトカードをここに追加 -->
+    </div>
+    <div id="skills" class="intro">
+        <h2>スキル</h2>
+        <!-- スキルアイコンをここに追加 -->
+    </div>
+    <div id="contact" class="intro">
+        <h2>連絡先</h2>
+        <p>メール: example@example.com</p>
+    </div>
+    <footer>
+        <p>&copy; 2023 あなたの名前</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html> 
